[project]
name = "audldb"
version = "0.0.1"
description = "Do things for whatever"
dependencies = [
    "beautifulsoup4",
    "dash>=2.5.0",
    "dash-bootstrap-components",
    "dash-auth",
    "gunicorn",
    "numpy",
    "pandas",
    "requests",
    "urllib3<2",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]